--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL ="mongodb+srv://mongoUser:mongo034@cluster0.9vklrcp.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URL ="your_url"
 PORT= "3000"
 
-TOKEN_KEY ="SWUOJU28JUGE5692SS"
+TOKEN_KEY ="secret ley"
